# paper-wars-data

./: .env  .env.sample  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2020-07-25-155931_accounts/: down.sql  up.sql
migrations/2020-07-25-162912_universes/: down.sql  up.sql
migrations/2020-07-25-175503_games/: down.sql  up.sql
migrations/2020-07-26-172209_server-permissions/: up.sql
src/: database.rs  lib.rs  schema.rs  traits.rs  types.rs
src/models/: account.rs  archetype.rs  archetype_version.rs  contributor.rs  email.rs  entity.rs  game.rs  login.rs  map.rs  map_version.rs  mod.rs  password_reset.rs  player.rs  universe.rs  universe_version.rs  universe_version_archetype.rs  universe_version_map.rs
universes/aoe-taok/: description.toml  en.ftl
universes/aoe-taok/damage-types/damage/: description.toml  en.toml
universes/aoe-taok/research/dark-age/: description.toml  en.ftl
universes/aoe-taok/research/leather-soles/: description.toml  en.ftl
universes/aoe-taok/research/loom/: description.toml  en.ftl
universes/aoe-taok/research/town-scouts/: description.toml  en.ftl
universes/aoe-taok/research/weaponsmiths/: description.toml  en.ftl
universes/aoe-taok/resources/food/: description.toml  en.ftl
universes/aoe-taok/resources/gold/: description.toml  en.ftl
universes/aoe-taok/stats/sight/: description.toml  en.ftl
universes/aoe-taok/unit-classes/building/: description.toml  en.ftl
universes/aoe-taok/unit-classes/move/: description.toml  en.ftl
universes/aoe-taok/unit-classes/research/: description.toml  en.ftl
(+11 files in other folders)
