[package]
name = "data"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
diesel = { version = "1.4.5", default-features = false, features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel-citext = "0.3.0"
diesel-derive-enum = { version = "1.1.0", features = ["postgres"] }
serde_json = "1.0.56"
uuid = "0.8.1"
