[package]
name = "data"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
serde_json = "1.0"
uuid = "0.8"

[dependencies.diesel]
branch = "master"
default-features = false
features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"]
git = "https://github.com/diesel-rs/diesel"

[dependencies.diesel-derive-enum]
branch = "master"
features = ["postgres"]
git = "https://github.com/adwhit/diesel-derive-enum"

[dependencies.diesel-citext]
branch = "master"
git = "https://github.com/foxfriends/diesel-citext"
